# neura

./: .env.example  .gitattributes  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  summary.md  tsconfig.json  vercel.json
.github/workflows/: hermes-health.yml
docs/: launch-content.md  launch-guide.md  openapi.yaml
examples/: README.md
examples/python/: crewai_agent.py
examples/typescript/: langgraph-agent.mjs  openai-function-calling.ts  vercel-ai-sdk.ts
public/: opensearch.xml
scripts/: e2e-test.sh  poll-payments.js  poll-payments.mjs
sdk/: .gitignore
sdk/python/: README.md  pyproject.toml  test_smoke.py
sdk/python/neura/: __init__.py  admin.py  client.py  memory.py  neura.py  payment.py  state.py  webhook.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: admin.ts  client.ts  index.ts  memory.ts  payment.ts  state.ts  types.ts  webhook.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: MatrixRain.tsx  Nav.tsx
src/lib/: auth.ts  credits.ts  embeddings.ts  errors.ts  idempotency.ts  middleware.ts  openai.ts  payments.ts  rate-limit.ts  response.ts  supabase-browser.ts  supabase.ts  types.ts  usage.ts  webhooks.ts  withCredits.ts
supabase/: config.toml
supabase/migrations/: 001_schema.sql  002_webhooks_sharing.sql  003_credits_payments.sql  004_deduct_credits.sql  005_redeem_payment.sql  006_self_serve_signup.sql  007_embeddings_dim_1024.sql  007_fix_signup_trigger.sql
test/: payment_test.cjs  rpc_test.mjs  smoke.cjs
(+36 files in other folders)
